--- a/index.html
+++ b/index.html
@@ -5,36 +5,264 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Chakra+Petch:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=IBM+Plex+Serif:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <body>
+
+<!-- NAVBAR NAVBAR NAVBAR NAVBAR NAVBAR NAVBAR NAVBAR NAVBAR NAVBAR NAVBAR NAVBAR NAVBAR NAVBAR NAVBAR NAVBAR -->
     <nav class="navbar nav-custom navbar-expand-lg navbar-light custom-shadow">
-        <a href="#"><img src="images/elits-logo.png" width="50px" class="navbar-brand img-fluid elits-logo"></a>
+        <a href="#"><img src="images/elits-logo.png" width="30px" class="navbar-brand img-fluid elits-logo"></a>
         <a class="navbar-brand text-lg" href="#"><span>Elite League of Information Technology Students</span></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
-            <li class="nav-item active">
+            <li class="nav-item">
                 <a class="nav-link" href="#"><span>Home</span></a>
             </li>
-            <li class="nav-item active">
+            <li class="nav-item">
                 <a class="nav-link" href="#"><span>Shop</span></a>
             </li>
-            <li class="nav-item active">
+            <li class="nav-item">
                 <a class="nav-link" href="#"><span>About Dev</span></a>
             </li>
-            <li class="nav-item active">
+            <li class="nav-item">
                 <a class="nav-link" href="#"><span>Who we are</span></a>
             </li>
           </ul>
         </div>
       </nav>
-    <div class="navigation-bar container-fluid">
 
+<!-- HERO SECTION HERO SECTION HERO SECTION HERO SECTION HERO SECTION HERO SECTION HERO SECTION HERO SECTION HERO SECTION -->
+    <div class="hero-section container-fluid">
+        <div class="container">
+            <img src="images/elts-president.png" class="img-fluid elits-president" width="300px">
+            <div class="hero-section-greeting">
+                <p>Elite League of Information Technology Students</p>
+                <h1 class="text-sm">The official website of ELITS, a school organization for <span>BSIT students at Cavite State University</span>.</h1>
+                <input type="text" class="form-control mt-4" placeholder="Search for a content">
+            </div>
+            <div class="hero-section-card">
+                <div class="card">
+                    <div class="card-body m-4">
+                        <div class="row">
+                            <div class="col-8">
+                                <p class="card-title">Become an ELIT member by <b>creating an account</b>.</p>
+                                <a href="#" class="btn btn-light mt-2"><span>Create Account</span></a>
+                            </div>
+                            <div class="col-4">
+                                <img src="images/elits-logo.png" class="img-fluid elits-logo" width="80px">
+                            </div>
+                        </div>
+                        
+                    </div>
+                  </div>
+            </div>
+        </div>
 
     </div>
+
+<!-- HISTORY SECTION HISTORY SECTION HISTORY SECTION HISTORY SECTION HISTORY SECTION HISTORY SECTION HISTORY SECTION HISTORY SECTION HISTORY SECTION -->
+    <div class="history-section container-fluid text-center">
+        <div class="container pt-5">
+            <h1>ELITS History</h1><hr style="color: white; outline: 1px solid white;">
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sapiente laborum voluptas ipsa voluptates, quaerat delectus veniam alias perspiciatis numquam. Facere nobis maxime debitis dolores quidem odit cupiditate commodi iure numquam! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Beatae magnam mollitia, earum culpa adipisci iusto sunt temporibus suscipit deserunt, doloremque dicta nesciunt! Odit corrupti laborum quia ipsa quo maxime quisquam.</p>
+            <div class="accordion mt-5" id="accordionExample">
+                <div class="accordion-item">
+                  <h2 class="accordion-header" id="headingOne">
+                    <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                      Background History #1
+                    </button>
+                  </h2>
+                  <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+                    <div class="accordion-body">
+                      <strong>Brief background history about ELITS.</strong> Sapiente laborum voluptas ipsa voluptates, quaerat delectus veniam alias perspiciatis numquam. Facere nobis maxime debitis dolores quidem odit cupiditate commodi iure numquam! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Beatae magnam mollitia, earum culpa adipisci iusto sunt temporibus suscipit deserunt, doloremque dicta nesciunt! Odit corrupti laborum quia ipsa quo maxime quisquam.
+                    </div>
+                  </div>
+                </div>
+                <div class="accordion-item">
+                  <h2 class="accordion-header" id="headingTwo">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                      Background History #2
+                    </button>
+                  </h2>
+                  <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
+                    <div class="accordion-body">
+                      <strong>Brief background history about ELITS.</strong> Sapiente laborum voluptas ipsa voluptates, quaerat delectus veniam alias perspiciatis numquam. Facere nobis maxime debitis dolores quidem odit cupiditate commodi iure numquam! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Beatae magnam mollitia, earum culpa adipisci iusto sunt temporibus suscipit deserunt, doloremque dicta nesciunt! Odit corrupti laborum quia ipsa quo maxime quisquam.
+                    </div>
+                  </div>
+                </div>
+                <div class="accordion-item">
+                  <h2 class="accordion-header" id="headingThree">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                      Background History #3
+                    </button>
+                  </h2>
+                  <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
+                    <div class="accordion-body">
+                      <strong>Brief background history about ELITS.</strong> Sapiente laborum voluptas ipsa voluptates, quaerat delectus veniam alias perspiciatis numquam. Facere nobis maxime debitis dolores quidem odit cupiditate commodi iure numquam! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Beatae magnam mollitia, earum culpa adipisci iusto sunt temporibus suscipit deserunt, doloremque dicta nesciunt! Odit corrupti laborum quia ipsa quo maxime quisquam.
+                    </div>
+                  </div>
+                </div>
+              </div>
+        </div>
+    </div>
+
+<!-- AWARDS SECTION AWARDS SECTION AWARDS SECTION AWARDS SECTION AWARDS SECTION AWARDS SECTION AWARDS SECTION AWARDS SECTION AWARDS SECTION -->
+    <div class="awards-section container-fluid">
+      <div class="container">
+        <h1 class="pt-5 text-center">List of ELITS Awards</h1><hr style="color: white; outline: 1px solid black;">
+          <div class="row mt-4">
+            <div class="col-lg-4 col-sm-12">
+              <div class="card mb-3" style="max-width: 540px;">
+                <div class="row g-0">
+                  <div class="col-md-5 award-image">
+                    <h4 class="award-title mt-5">Award Title</h4>
+                    <p class="award-title mt-2">Category (optional)</p>
+                  </div>
+                  <div class="col-md-7">
+                    <div class="card-body">
+                      <h5 class="card-title">Short Description</h5>
+                      <p class="card-text">Lorem ipsum dolor sit amet consectetur adip elit.</p>
+                      <a class="btn btn-sm award-button" data-bs-toggle="modal" data-bs-target="#award"><span>See More...</span></a>
+                      <p class="card-text"><small class="text-muted">Date Received</small></p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-4 col-sm-12">
+              <div class="card mb-3" style="max-width: 540px;">
+                <div class="row g-0">
+                  <div class="col-md-5 award-image">
+                    <h4 class="award-title mt-5">Award Title</h4>
+                    <p class="award-title mt-2">Category (optional)</p>
+                  </div>
+                  <div class="col-md-7">
+                    <div class="card-body">
+                      <h5 class="card-title">Short Description</h5>
+                      <p class="card-text">Lorem ipsum dolor sit amet consectetur adip elit.</p>
+                      <a class="btn btn-sm award-button" data-bs-toggle="modal" data-bs-target="#award"><span>See More...</span></a>
+                      <p class="card-text"><small class="text-muted">Date Received</small></p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-4 col-sm-12">
+              <div class="card mb-3" style="max-width: 540px;">
+                <div class="row g-0">
+                  <div class="col-md-5 award-image">
+                    <h4 class="award-title mt-5">Award Title</h4>
+                    <p class="award-title mt-2">Category (optional)</p>
+                  </div>
+                  <div class="col-md-7">
+                    <div class="card-body">
+                      <h5 class="card-title">Short Description</h5>
+                      <p class="card-text">Lorem ipsum dolor sit amet consectetur adip elit.</p>
+                      <a class="btn btn-sm award-button" data-bs-toggle="modal" data-bs-target="#award"><span>See More...</span></a>
+                      <p class="card-text"><small class="text-muted">Date Received</small></p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="row mt-3 pb-5">
+            <div class="col-lg-4 col-sm-12">
+              <div class="card mb-3" style="max-width: 540px;">
+                <div class="row g-0">
+                  <div class="col-md-5 award-image">
+                    <h4 class="award-title mt-5">Award Title</h4>
+                    <p class="award-title mt-2">Category (optional)</p>
+                  </div>
+                  <div class="col-md-7">
+                    <div class="card-body">
+                      <h5 class="card-title">Short Description</h5>
+                      <p class="card-text">Lorem ipsum dolor sit amet consectetur adip elit.</p>
+                      <a class="btn btn-sm award-button" data-bs-toggle="modal" data-bs-target="#award"><span>See More...</span></a>
+                      <p class="card-text"><small class="text-muted">Date Received</small></p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-4 col-sm-12">
+              <div class="card mb-3" style="max-width: 540px;">
+                <div class="row g-0">
+                  <div class="col-md-5 award-image">
+                    <h4 class="award-title mt-5">Award Title</h4>
+                    <p class="award-title mt-2">Category (optional)</p>
+                  </div>
+                  <div class="col-md-7">
+                    <div class="card-body">
+                      <h5 class="card-title">Short Description</h5>
+                      <p class="card-text">Lorem ipsum dolor sit amet consectetur adip elit.</p>
+                      <a class="btn btn-sm award-button" data-bs-toggle="modal" data-bs-target="#award"><span>See More...</span></a>
+                      <p class="card-text"><small class="text-muted">Date Received</small></p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-4 col-sm-12">
+              <div class="card mb-3" style="max-width: 540px;">
+                <div class="row g-0">
+                  <div class="col-md-5 award-image">
+                    <h4 class="award-title mt-5">Award Title</h4>
+                    <p class="award-title mt-2">Category (optional)</p>
+                  </div>
+                  <div class="col-md-7">
+                    <div class="card-body">
+                      <h5 class="card-title">Short Description</h5>
+                      <p class="card-text">Lorem ipsum dolor sit amet consectetur adip elit.</p>
+                      <a class="btn btn-sm award-button" data-bs-toggle="modal" data-bs-target="#award"><span>See More...</span></a>
+                      <p class="card-text"><small class="text-muted">Date Received</small></p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+      </div>
+
+      <div class="modal" id="award" tabindex="-1">
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title">Award Title</h5>
+              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+              <div class="card" style="width: 100%;">
+                <img src="images/award-image.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <p class="card-text"><strong>More info about the award.</strong> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vero fuga fugiat molestias perspiciatis consequuntur. Quisquam repudiandae sed velit sit esse debitis? Nulla unde quia odit officia ratione iure vel atque. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Totam vel exercitationem laborum.</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+    </div>
+
+
+    <div class="news-section container-fluid">
+      <div class="container">
+        <h1 class="pt-5 text-center">Latest News Update</h1><hr style="color: white; outline: 1.3px solid white;">
+      </div>
+    </div>
+
+
+
+
+
+
 </body>
 </html>
