--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Chakra+Petch:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=IBM+Plex+Serif:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+    <script src="script.js"></script>
     <link rel="stylesheet" href="style.css">
     <title>ELITS - CvSU Indang Campus</title>
     <link rel="icon" type="image/png" href="images/elits-logo.png">
@@ -15,34 +16,41 @@
 <body>
 
 <!-- NAVBAR NAVBAR NAVBAR NAVBAR NAVBAR NAVBAR NAVBAR NAVBAR NAVBAR NAVBAR NAVBAR NAVBAR NAVBAR NAVBAR NAVBAR -->
-    <nav class="navbar nav-custom navbar-expand-lg navbar-light custom-shadow">
-        <a href="#"><img src="images/elits-logo.png" width="30px" class="navbar-brand img-fluid elits-logo"></a>
-        <a class="navbar-brand text-lg" href="#"><span>Elite League of Information Technology Students</span></a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav">
-            <li class="nav-item">
-                <a class="nav-link" href="#"><span>Home</span></a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#"><span>Shop</span></a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#"><span>About Dev</span></a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#"><span>Who we are</span></a>
-            </li>
-          </ul>
-        </div>
-      </nav>
+    <nav class="navbar navbar-expand-lg navbar-light custom-shadow sticky-top">
+      <a href="#"><img src="images/elits-logo.png" width="30px" class="navbar-brand img-fluid elits-logo"></a>
+      <a class="navbar-brand text-lg" href="#"><span>Elite League of Information Technology Students</span></a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false"><span>Home</span></a>
+            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <li><a class="dropdown-item" href="#history-section">ELIST History</a></li>
+              <li><a class="dropdown-item" href="#awards-section">Awards</a></li>
+              <li><a class="dropdown-item" href="#news-section">Latest News</a></li>
+              <li><a class="dropdown-item" href="#events-section">Events</a></li>
+              <li><a class="dropdown-item" href="#">Join Us</a></li>
+            </ul>
+          </li>
+          <li class="nav-item">
+              <a class="nav-link" href="shop.html"><span>Shop</span></a>
+          </li>
+          <li class="nav-item">
+              <a class="nav-link" href="#"><span>About Dev</span></a>
+          </li>
+          <li class="nav-item">
+              <a class="nav-link" href="#"><span>Who we are</span></a>
+          </li>
+        </ul>
+      </div>
+    </nav>
 
 <!-- HERO SECTION HERO SECTION HERO SECTION HERO SECTION HERO SECTION HERO SECTION HERO SECTION HERO SECTION HERO SECTION -->
     <div class="hero-section container-fluid">
         <div class="container">
-            <img src="images/elts-president.png" class="img-fluid elits-president" width="300px">
+            <img src="images/elts-president.png" class="img-fluid elits-member" width="300px">
             <div class="hero-section-greeting">
                 <p>Elite League of Information Technology Students</p>
                 <h1 class="text-sm">The official website of ELITS, a school organization for <span>BSIT students at Cavite State University</span>.</h1>
@@ -53,7 +61,7 @@
                     <div class="card-body m-4">
                         <div class="row">
                             <div class="col-8">
-                                <p class="card-title">Become an ELIT member by <b>creating an account</b>.</p>
+                                <p class="card-title">Become an ELITS member by <b>creating an account</b>.</p>
                                 <a href="#" class="btn btn-light mt-2"><span>Create Account</span></a>
                             </div>
                             <div class="col-4">
@@ -914,6 +922,12 @@
       </div>
 
     </div>
+ 
+    <section class="join-section container-fluid pt-5">
+      <video autoplay muted loop class="videoplay">
+          <source src="/videos/join.mp4" type="video/mp4">
+      </video>
+    </section>
 
 
 
